<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gioco</groupId>
    <artifactId>Angolo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Angolo</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>21</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.synedra</groupId>
            <artifactId>validatorfx</artifactId>
            <version>0.4.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>11.48</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.almasb</groupId>
            <artifactId>fxgl</artifactId>
            <version>17.3</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>

                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
                </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>gioco.angolo.Main</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>gioco.angolo.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.0.0</version>

                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <exec executable="${java.home}/bin/jlink" osfamily="mac" failonerror="true">
                                    <arg value="--module-path"/>
                                    <arg value="${java.home}/jmods:${project.build.directory}/dependency:${project.build.directory}/classes"/>

                                    <arg value="--add-modules"/>
                                    <arg value="gioco.angolo,java.base,java.net.http,java.scripting,java.sql,jdk.jfr,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom,org.controlsfx.controls,com.dlsc.formsfx,net.synedra.validatorfx,org.kordamp.ikonli.javafx,org.kordamp.bootstrapfx.core,eu.hansolo.tilesfx,com.almasb.fxgl.all"/>

                                    <arg value="--output"/>
                                    <arg value="${project.build.directory}/jre"/>

                                    <arg value="--compress=2"/>
                                    <arg value="--no-header-files"/>
                                    <arg value="--no-man-pages"/>
                                </exec>
                                <exec executable="jpackage" osfamily="mac" failonerror="true">
                                    <arg value="--name"/>
                                    <arg value="AngleGame"/>

                                    <arg value="--input"/>
                                    <arg value="/Users/gatti/Documents/GitHub/AngleGame/target"/>

                                    <arg value="--main-jar"/>
                                    <arg value="Angolo-1.0-SNAPSHOT.jar"/>

                                    <arg value="--main-class"/>
                                    <arg value="gioco.angolo.Main"/>

                                    <arg value="--runtime-image"/>
                                    <arg value="/Users/gatti/Documents/GitHub/AngleGame/target/jre"/>

                                    <arg value="--type"/>
                                    <arg value="dmg"/>

                                    <arg value="--dest"/>
                                    <arg value="/Users/gatti/Documents/GitHub/AngleGame/target"/>
                                </exec>


                                <exec executable="jlink" osfamily="windows" failonerror="true">
                                    <arg value="--module-path"/>
                                    <arg value="${java.home}\jmods;${project.build.directory}\dependency;${project.build.directory}\classes"/>
                                    <arg value="--add-modules"/>
                                    <arg value="gioco.angolo,java.base,java.net.http,java.scripting,java.sql,jdk.jfr,jdk.jsobject,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom,org.controlsfx.controls,com.dlsc.formsfx,net.synedra.validatorfx,org.kordamp.ikonli.javafx,org.kordamp.bootstrapfx.core,eu.hansolo.tilesfx,com.almasb.fxgl.all"/>
                                    <arg value="--output"/>
                                    <arg value="${project.build.directory}\jre"/>
                                    <arg value="--compress=2"/>
                                    <arg value="--no-header-files"/>
                                    <arg value="--no-man-pages"/>
                                </exec>
                                <exec executable="jpackage" osfamily="windows" failonerror="true">
                                    <arg value="--name"/>
                                    <arg value="AngleGame"/>

                                    <arg value="--input"/>
                                    <arg value="C:\Users\simog\Documents\GitHub\AngleGame\target"/>

                                    <arg value="--main-jar"/>
                                    <arg value="Angolo-1.0-SNAPSHOT.jar"/>

                                    <arg value="--main-class"/>
                                    <arg value="gioco.angolo.Main"/>

                                    <arg value="--runtime-image"/>
                                    <arg value="C:\Users\simog\Documents\GitHub\AngleGame\target\jre"/>

                                    <arg value="--type"/>
                                    <arg value="exe"/>

                                    <arg value="--dest"/>
                                    <arg value="C:\Users\simog\Documents\GitHub\AngleGame\target"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>

                <executions>
                    <execution>
                        <id>create-desktop-shortcut</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>powershell.exe</executable>
                            <arguments>
                                <argument>-Command</argument>
                                <argument>
                                    New-Item -Path $env:USERPROFILE\Desktop\AngleGame.lnk -TargetPath "C:\Program Files\AngleGame\AngleGame.exe" -Description "Play Angle Game"
                                </argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>